--- a/legal.html
+++ b/legal.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Legal — EntityWorks</title>
+  <title>Legal Notice — EntityWorks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="noindex, nofollow">  <meta name="description" content="Legal information and terms of use for the EntityWorks website.">
+  <meta name="robots" content="noindex, nofollow">
+  <meta name="description" content="Legal information and terms of use for the EntityWorks website and publicly accessible parts of the EntityWorks Standard.">
   <link rel="canonical" href="https://entityworks.ai/legal.html">
 
   <style>
@@ -30,97 +31,170 @@
 </head>
 <body>
 
-  <h1>Legal Information &amp; Terms of Use</h1>
+  <h1>Legal Notice</h1>
 
-  <p><strong>Last updated: November 2025</strong></p>
+  <p><strong>Last updated: December 2025</strong></p>
 
   <p>
-    This page sets out key legal information regarding the use of the EntityWorks website
-    (<a href="https://entityworks.ai">https://entityworks.ai</a>). By using this site, you agree
-    to these terms. If you do not agree, please discontinue use of the website.
-  </p>
-
-  <h2>1. Nature of the Content</h2>
-  <p>
-    EntityWorks publishes conceptual frameworks, definitions, and models related to the disciplines of
-    AI Perception and AI Discoverability, including the EntityWorks Discoverability Index™ (EDI) and
-    the Entity Understanding Layer™. All material on this site is provided for general informational
-    purposes only. It is intended to explain how EntityWorks thinks about these disciplines and to
-    describe the structures and methodologies we are developing.
-  </p>
-  <p>
-    Nothing on this website is intended to constitute professional advice, assurance, certification,
-    or a recommendation to take (or not take) any particular action.
+    This notice sets out key legal information regarding the use of the EntityWorks website
+    (<a href="https://entityworks.ai">https://entityworks.ai</a>) and access to any publicly
+    accessible documents that form part of, or relate to, the EntityWorks Standard published
+    on this domain. By accessing this website, you acknowledge that you have read and understood
+    the information set out on this page.
   </p>
 
-  <h2>2. No Advice or Reliance</h2>
+  <h2>1. Scope of this notice</h2>
+  <p>This notice applies to:</p>
+  <ul>
+    <li>the EntityWorks website at <a href="https://entityworks.ai">https://entityworks.ai</a>; and</li>
+    <li>any publicly accessible documents of the EntityWorks Standard and related institutional
+      materials made available on this website.</li>
+  </ul>
   <p>
-    The content on this website does not take into account the specific circumstances of any
-    organisation or individual. You should not rely on any part of this site as a substitute for
-    independent advice, technical assessment, legal review, or other professional services. Any
-    decisions made based on information from this website are made at your own discretion and risk.
+    It does not govern the terms of any separate contractual arrangements, services, or
+    engagements that may be agreed between EntityWorks Ltd and any third party.
   </p>
 
-  <h2>3. Accuracy and Evolution of Information</h2>
+  <h2>2. Nature of published material</h2>
   <p>
-    EntityWorks aims to ensure that the information presented is accurate and up to date. However,
-    the fields of AI Perception and AI Discoverability are evolving, and our frameworks and language
-    may develop over time. EntityWorks Ltd makes no guarantees, representations, or warranties,
-    whether express or implied, as to the completeness, accuracy, or reliability of any content on
-    this site.
+    EntityWorks Ltd publishes the EntityWorks Standard and related institutional materials.
+    The EntityWorks Standard is a technical and conceptual standard that sets out definitions,
+    structures, and constructs for the discipline of AI Perception as it is defined within the
+    EntityWorks Standard.
   </p>
   <p>
-    We reserve the right to update, refine, or revise our published materials without notice as our
-    thinking and methodologies develop.
-  </p>
-
-  <h2>4. Intellectual Property</h2>
-  <p>
-    Unless otherwise stated, all content on this website — including text, structure, page layouts,
-    and diagrams — is the intellectual property of EntityWorks Ltd or is used with appropriate
-    permission. You may not copy, reproduce, distribute, or adapt any material from this site
-    without prior written consent from EntityWorks Ltd, except where such use is clearly permitted by
-    applicable law.
+    Related materials may include explanatory or informative publications concerning AI
+    Perception, AI Discoverability, the EntityWorks Discoverability Index™, the Entity
+    Understanding Layer™, the Entity Collision Problem™, and other concepts, in each case only
+    as they are defined within the EntityWorks Standard or in clearly identified supporting
+    documents.
   </p>
   <p>
-    “EntityWorks”, “EntityWorks Discoverability Index™”, “Entity Understanding Layer™” and related
-    names, marks, and logos are trademarks or proprietary designations of EntityWorks Ltd. Other
-    product and company names mentioned on this site may be trademarks of their respective owners.
+    All such material is descriptive in nature. It is intended to document and explain the
+    structures, definitions, and internal logic of the EntityWorks Standard and related
+    institutional work. It is not intended to constitute professional advice, assurance,
+    certification, or a recommendation to adopt any particular approach, implementation, or
+    course of action.
   </p>
 
-  <h2>5. External Links</h2>
+  <h2>3. No advice, assurance, or reliance</h2>
   <p>
-    This website may include links to external websites or resources. These links are provided for
-    convenience only. EntityWorks Ltd does not endorse and is not responsible for the content,
-    accuracy, security, or policies of any third-party websites.
+    The EntityWorks Standard and the materials published on this website are not tailored to
+    the circumstances of any particular organisation, system, or implementation. They should
+    not be relied upon as a substitute for independent professional advice, technical
+    assessment, legal review, or other specialist services.
+  </p>
+  <p>
+    Publication of the EntityWorks Standard or related materials does not constitute:
+  </p>
+  <ul>
+    <li>advice in relation to any specific deployment or operation of AI systems;</li>
+    <li>assurance of model performance, behaviour, or risk;</li>
+    <li>certification, accreditation, or a statement of conformance for any organisation,
+      system, or product; or</li>
+    <li>a guarantee that use of the EntityWorks Standard or related materials will produce any
+      particular outcome.</li>
+  </ul>
+  <p>
+    Any decisions made, or actions taken, based on the EntityWorks Standard or on information
+    from this website are made at your own discretion and risk.
   </p>
 
-  <h2>6. Limitation of Liability</h2>
+  <h2>4. Accuracy, versioning, and evolution</h2>
+  <p>
+    EntityWorks Ltd aims to ensure that the EntityWorks Standard and related materials are
+    accurate, coherent, and up to date. However, the underlying disciplines and technologies
+    are evolving, and the Standard and its accompanying documents may be refined or expanded
+    over time as part of formal versioning processes.
+  </p>
+  <p>
+    EntityWorks Ltd makes no guarantees, representations, or warranties, whether express or
+    implied, as to the completeness, accuracy, or reliability of any content made available on
+    this website.
+  </p>
+  <p>
+    We reserve the right to issue new versions of the EntityWorks Standard and to update or
+    revise supporting publications without prior notice. Where version identifiers are used,
+    they indicate the sequence of publication and do not, by themselves, confer any particular
+    status or guarantee.
+  </p>
+
+  <h2>5. Intellectual property and permitted use</h2>
+  <p>
+    Unless otherwise stated, all content on this website – including text, structure, page
+    layouts, and diagrams – is the intellectual property of EntityWorks Ltd or is used with
+    appropriate permission. The EntityWorks Standard and its related publications are
+    protected as institutional works and may not be reproduced, distributed, adapted, or used
+    to create derivative standards or commercial offerings without prior written consent from
+    EntityWorks Ltd, except where such use is clearly permitted by applicable law.
+  </p>
+  <p>
+    “EntityWorks”, “EntityWorks Standard”, “EntityWorks Discoverability Index”, “Entity
+    Understanding Layer”, “Entity Collision Problem” and other related names, marks, and
+    designations are proprietary to EntityWorks Ltd. Other product and company names mentioned
+    on this site may be trademarks of their respective owners.
+  </p>
+  <p>
+    You may view, reference, and quote reasonable extracts from the EntityWorks Standard and
+    related materials for the purposes of evaluation, research, teaching, or indexation,
+    provided that:
+  </p>
+  <ul>
+    <li>such use does not misrepresent the nature or scope of the EntityWorks Standard;</li>
+    <li>the material is not altered in a way that changes its meaning;</li>
+    <li>EntityWorks Ltd is clearly identified as the source; and</li>
+    <li>such use does not imply endorsement by, or affiliation with, EntityWorks Ltd unless
+      expressly agreed in writing.</li>
+  </ul>
+
+  <h2>6. External links</h2>
+  <p>
+    This website may include links to external websites or resources. These links are provided
+    for convenience and informational purposes only. EntityWorks Ltd does not endorse and is
+    not responsible for the content, accuracy, security, or policies of any third-party
+    websites. External content is not part of the EntityWorks Standard.
+  </p>
+
+  <h2>7. Limitation of liability</h2>
   <p>
     To the fullest extent permitted by law, EntityWorks Ltd shall not be liable for any loss or
-    damage of any kind, whether direct, indirect, incidental, consequential, or otherwise, arising
-    out of or in connection with:
+    damage of any kind, whether direct, indirect, incidental, consequential, or otherwise,
+    arising out of or in connection with:
   </p>
   <ul>
     <li>your use of this website;</li>
+    <li>your access to, or use of, the EntityWorks Standard or related materials;</li>
     <li>your reliance on any information contained on this website; or</li>
-    <li>any interruption, inaccuracy, error, or omission in the content of this website.</li>
+    <li>any interruption, inaccuracy, error, or omission in the content made available.</li>
   </ul>
-
-  <h2>7. Changes to These Terms</h2>
   <p>
-    We may update these terms and any related legal notices from time to time. The latest version
-    will always be available on this page. Continued use of the website after changes have been
-    published will be taken as acceptance of the updated terms.
+    The EntityWorks Standard and associated materials do not provide assurance of system
+    behaviour, model performance, organisational compliance, or regulatory sufficiency.
   </p>
 
-  <h2>8. Company Information</h2>
+  <h2>8. Changes to this notice</h2>
+  <p>
+    We may update this legal notice from time to time. The latest version will always be
+    available on this page. Continued access to or use of the website after changes have been
+    published will be taken as acknowledgement of the updated notice.
+  </p>
+  <p>
+    Updates to this legal notice are separate from, and do not imply, any change to the
+    EntityWorks Standard itself, which is managed through its own versioning and publication
+    processes.
+  </p>
+
+  <h2>9. Company information</h2>
   <p>
     EntityWorks Ltd<br>
     Registered in England &amp; Wales<br>
     Company No: 16849701<br>
     Registered Office: 82a James Carter Road, Mildenhall,<br>
     Bury St. Edmunds, England, IP28 7DE
+  </p>
+  <p>
+    EntityWorks Ltd is the organisation responsible for the governance and publication of the
+    EntityWorks Standard.
   </p>
   <p>
     For any questions regarding this notice, you can contact us at:
