--- a/privacy.html
+++ b/privacy.html
@@ -1,11 +1,13 @@
+<!-- STATUS: AMEND — Requires alignment with EntityWorks Positioning Codex -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Privacy & GDPR — EntityWorks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="noindex, nofollow">  <meta name="description" content="Privacy and GDPR notice for the EntityWorks website, explaining how we handle enquiries and technical data.">
+  <meta name="robots" content="noindex, nofollow">
   <link rel="canonical" href="https://entityworks.ai/privacy.html">
+  <meta name="description" content="Privacy and GDPR notice for the EntityWorks website, explaining how personal data is handled when visitors voluntarily contact EntityWorks.">
 
   <style>
     body {
@@ -26,119 +28,155 @@
     p, li {
       margin-bottom: 0.75rem;
     }
+    a {
+      color: #0057ff;
+    }
   </style>
 </head>
+
 <body>
 
-  <h1>Privacy &amp; GDPR Notice</h1>
+<h1>Privacy &amp; GDPR Notice</h1>
 
-  <p><strong>Last updated: 15th November 2025</strong></p>
+<p><strong>Last updated: December 2025</strong></p>
 
-  <p>
-    EntityWorks Ltd (“we”, “us”, “our”) operates
-    <a href="https://entityworks.ai">https://entityworks.ai</a>.
-    We are committed to protecting your privacy and being transparent about how we use data.
-    This website exists to publish the principles, structures, and frameworks of the disciplines
-    of AI Perception and AI Discoverability. It does not collect behavioural or personal data of any kind.
-  </p>
+<p>
+  EntityWorks Ltd (“EntityWorks”, “we”, “us”, “our”) operates
+  <a href="https://entityworks.ai">https://entityworks.ai</a>. This website exists to publish the
+  EntityWorks Standard and related institutional materials concerning the disciplines of
+  AI Perception and AI Discoverability as they are defined within the EntityWorks Standard.
+  The website does not collect behavioural data, personal identifiers, analytics, or tracking information.
+</p>
 
-  <p>
-    This privacy notice is designed to be straightforward and easy to read, without unnecessary legal jargon.
-  </p>
+<p>
+  This notice explains what personal data we may handle, under what circumstances, and for what purpose.
+</p>
 
-  <h2>1. Data Controller</h2>
-  <p>
-    For the purposes of the UK GDPR, the data controller for any personal data you choose to send us is:
-  </p>
-  <p>
-    EntityWorks Ltd<br>
-    Registered in England &amp; Wales<br>
-    Company No: 16849701<br>
-    Registered Office: 82a James Carter Road, Mildenhall,<br>
-    Bury St. Edmunds, England, IP28 7DE
-  </p>
+<h2>1. Data Controller</h2>
 
-  <h2>2. We Do Not Collect Personal Data via the Website</h2>
-  <p>
-    EntityWorks does not collect, store, process, or track any personal information from visitors simply
-    browsing this website.
-  </p>
-  <p>
-    We do not run any server-side analytics, user accounts, or database systems for this site.
-  </p>
+<p>For the purposes of the UK GDPR, the data controller is:</p>
 
-  <h2>3. Cookie &amp; Tracking Statement</h2>
-  <p>
-    EntityWorks does not use cookies, analytics tools, or any tracking technologies on this website.
-    No information is stored on your device and no behavioural data is collected by us when you visit
-    the site.
-  </p>
+<p>
+  EntityWorks Ltd<br>
+  Registered in England &amp; Wales<br>
+  Company No: 16849701<br>
+  Registered Office: 82a James Carter Road, Mildenhall,<br>
+  Bury St. Edmunds, England, IP28 7DE
+</p>
 
-  <h2>4. Voluntary Contact</h2>
-  <p>
-    If you choose to contact us by email at
-    <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>,
-    your message will be processed solely for the purpose of responding to your enquiry.
-  </p>
-  <p>
-    We do not add your details to marketing lists, share them with third parties, or use them for any
-    purpose other than handling your enquiry.
-  </p>
-  <p>
-    We retain correspondence only for as long as necessary to respond and to manage any follow-up
-    directly related to your enquiry, after which it may be deleted or archived in line with normal
-    business record-keeping practices.
-  </p>
+<h2>2. We Do Not Collect Personal Data via the Website</h2>
 
-  <h2>5. Legal Basis for Processing (Article 6 UK GDPR)</h2>
-  <p>
-    If you email us, our legal basis for processing your personal data is:
-    <strong>Legitimate Interest</strong> — specifically, responding to an enquiry you initiated.
-  </p>
+<p>
+  EntityWorks does <strong>not</strong> collect, store, process, or track any personal information from visitors who simply browse this website.
+</p>
 
-  <h2>6. Hosting &amp; Technical Logs</h2>
-  <p>
-    This website is hosted on GitHub Pages. GitHub may collect minimal technical logs (for example,
-    IP address and basic request information) for security, performance monitoring, and misuse prevention.
-    These logs are controlled and processed by GitHub under their own privacy policy.
-  </p>
-  <p>
-    EntityWorks does not control, access, or store these hosting logs and does not use them for
-    profiling, analytics, or marketing purposes.
-  </p>
+<ul>
+  <li>No cookies are set by EntityWorks</li>
+  <li>No analytics or tracking scripts are used</li>
+  <li>No user accounts or logins exist</li>
+  <li>No server-side collection of behavioural data takes place</li>
+</ul>
 
-  <h2>7. Your Rights</h2>
-  <p>
-    Under the UK GDPR, if you have contacted us and we hold personal data about you in that context,
-    you have the right to:
-  </p>
-  <ul>
-    <li>request access to the personal data we hold about you,</li>
-    <li>request correction of inaccurate or incomplete data,</li>
-    <li>request deletion of your data where appropriate,</li>
-    <li>object to or restrict our processing in certain circumstances.</li>
-  </ul>
+<p>
+  Your browser may store standard cached files to display pages, but EntityWorks does not access, process, or use this information.
+</p>
 
-  <p>
-    To exercise any of these rights, contact us at:
-    <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>.
-  </p>
+<h2>3. Cookie &amp; Tracking Statement</h2>
 
-  <h2>8. Changes to This Notice</h2>
-  <p>
-    We may update this privacy notice from time to time to reflect changes in our practices or
-    in applicable law. The latest version will always be available on this page, and the
-    “Last updated” date at the top will reflect the most recent revision.
-  </p>
+<p>
+  This website does not set or use cookies, analytics tools, advertising technologies, fingerprinting tools, or behavioural tracking mechanisms.
+</p>
 
-  <h2>9. Contact Information</h2>
-  <p>
-    If you have any questions about this notice or how we handle personal data, please contact:
-  </p>
-  <p>
-    EntityWorks Ltd<br>
-    Email: <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
-  </p>
+<p>
+  No information is stored on your device by EntityWorks, and no third-party tracking services operate on this site.
+</p>
+
+<h2>4. Voluntary Contact</h2>
+
+<p>
+  If you choose to contact us by email at
+  <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>,
+  we will process the personal data included in your message solely for the purpose of responding to your enquiry.
+</p>
+
+<p>
+  We do not:
+</p>
+
+<ul>
+  <li>add your details to marketing lists,</li>
+  <li>use your data for anything beyond your enquiry,</li>
+  <li>share your correspondence with third parties.</li>
+</ul>
+
+<p>
+  Correspondence is retained only as long as necessary to manage and complete the exchange, after which it may be deleted or archived in line with normal business record-keeping practices.
+</p>
+
+<h2>5. Legal Basis for Processing (Article 6 UK GDPR)</h2>
+
+<p>
+  If you email us, our lawful basis for processing your personal data is
+  <strong>Legitimate Interest</strong> — specifically, responding to an enquiry you initiated.
+</p>
+
+<h2>6. Hosting &amp; Technical Logs</h2>
+
+<p>
+  This website is hosted on GitHub Pages. GitHub may collect minimal technical logs
+  (e.g., IP address and request metadata) for security, abuse prevention, and performance monitoring.
+</p>
+
+<p>
+  These logs:
+</p>
+
+<ul>
+  <li>are processed solely by GitHub,</li>
+  <li>are covered by GitHub’s own privacy policy,</li>
+  <li>are not accessed, collected, or used by EntityWorks.</li>
+</ul>
+
+<p>
+  EntityWorks does not use hosting logs for analytics, profiling, or marketing.
+</p>
+
+<h2>7. Your Rights</h2>
+
+<p>If you have contacted us and we hold personal data about you, you have the right to:</p>
+
+<ul>
+  <li>request access to your personal data,</li>
+  <li>request correction of inaccurate information,</li>
+  <li>request deletion of your data where appropriate,</li>
+  <li>object to or restrict our processing in certain circumstances.</li>
+</ul>
+
+<p>
+  To exercise these rights, contact:
+  <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>.
+</p>
+
+<p>
+  You may also lodge a complaint with the Information Commissioner’s Office (ICO) if you have concerns about how your data is being handled.
+</p>
+
+<h2>8. Changes to This Notice</h2>
+
+<p>
+  We may update this privacy notice from time to time. The most recent version will always be published on this page.
+</p>
+
+<p>
+  Updates to this notice do not imply changes to the EntityWorks Standard, which is governed through its own publication and versioning processes.
+</p>
+
+<h2>9. Contact Information</h2>
+
+<p>
+  EntityWorks Ltd<br>
+  Email: <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
+</p>
 
 </body>
 </html>
