--- a/privacy.html
+++ b/privacy.html
@@ -1,13 +1,33 @@
 <!-- STATUS: AMEND — Requires alignment with EntityWorks Positioning Codex -->
+<!-- VERSION: EW-LEGAL-v2025.12 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Privacy & GDPR — EntityWorks</title>
+  <title>Legal — EntityWorks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
-  <link rel="canonical" href="https://entityworks.ai/privacy.html">
-  <meta name="description" content="Privacy and GDPR notice for the EntityWorks website, explaining how personal data is handled when visitors voluntarily contact EntityWorks.">
+  <link rel="canonical" href="https://entityworks.ai/legal.html">
+  <meta name="description" content="Legal information and terms of use for the EntityWorks website, including intellectual property notices and disclaimer statements.">
+
+  <!-- MACHINE-READABLE LEGAL NOTICE (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org/",
+    "@type": "LegalService",
+    "name": "EntityWorks Legal Notice",
+    "url": "https://entityworks.ai/legal.html",
+    "dateModified": "2025-12-01",
+    "publisher": {
+      "@type": "Organization",
+      "name": "EntityWorks Ltd",
+      "url": "https://entityworks.ai"
+    },
+    "description": "Legal information regarding the use of the EntityWorks website and its published materials. Includes intellectual property notices, disclaimers, and the scope of published conceptual material relating to AI Perception and AI Discoverability as defined within the EntityWorks Standard.",
+    "serviceType": "Technical standard publication and organisational legal notice",
+    "conditionsOfAccess": "Use of this website implies acceptance of the legal terms described herein."
+  }
+  </script>
 
   <style>
     body {
@@ -36,26 +56,89 @@
 
 <body>
 
-<h1>Privacy &amp; GDPR Notice</h1>
+<h1>Legal Information &amp; Terms of Use</h1>
 
 <p><strong>Last updated: December 2025</strong></p>
 
 <p>
-  EntityWorks Ltd (“EntityWorks”, “we”, “us”, “our”) operates
-  <a href="https://entityworks.ai">https://entityworks.ai</a>. This website exists to publish the
-  EntityWorks Standard and related institutional materials concerning the disciplines of
-  AI Perception and AI Discoverability as they are defined within the EntityWorks Standard.
-  The website does not collect behavioural data, personal identifiers, analytics, or tracking information.
+  This page sets out the key legal information governing the use of the EntityWorks website
+  (<a href="https://entityworks.ai">https://entityworks.ai</a>). By using this site, you agree to these terms.
+  If you do not agree, please discontinue use of the website.
+</p>
+
+<h2>1. Nature of the Content</h2>
+<p>
+  EntityWorks publishes conceptual frameworks, definitions, models, and supporting materials relating
+  to the disciplines of AI Perception and AI Discoverability, including components of the EntityWorks
+  Standard such as the EntityWorks Discoverability Index™ and the Entity Understanding Layer™.
+  All material is provided for general informational purposes only. It explains how EntityWorks
+  understands these disciplines as defined within the EntityWorks Standard.
+</p>
+<p>
+  Nothing published on this website constitutes professional advice, technical assurance, certification,
+  or a recommendation to take or refrain from any action.
+</p>
+
+<h2>2. No Advice or Reliance</h2>
+<p>
+  The content on this website does not take into account the specific circumstances of any
+  organisation or individual. You should not rely on any part of this site as a substitute for
+  independent professional advice, legal review, or technical assessment. Any decisions made based on
+  information from this website are undertaken at your own discretion and risk.
+</p>
+
+<h2>3. Accuracy and Evolution of Information</h2>
+<p>
+  EntityWorks aims to ensure that the EntityWorks Standard and related materials are accurate,
+  coherent, and up to date. However, the underlying disciplines and technologies are evolving,
+  and the Standard and its accompanying documents may be refined or expanded over time.
+</p>
+<p>
+  EntityWorks Ltd makes no guarantees, representations, or warranties, whether expressed or implied,
+  as to the completeness, accuracy, or reliability of any content on this site.
+</p>
+
+<h2>4. Intellectual Property</h2>
+<p>
+  Unless otherwise stated, all content on this website — including text, diagrams, frameworks, page
+  structures, and conceptual models — is the intellectual property of EntityWorks Ltd or is used with
+  appropriate permission. You may not copy, reproduce, distribute, or adapt any material from this
+  site without prior written consent, except where such use is clearly permitted by applicable law.
 </p>
 
 <p>
-  This notice explains what personal data we may handle, under what circumstances, and for what purpose.
+  “EntityWorks™”, “EntityWorks Standard™”, “EntityWorks Discoverability Index™”, “Entity Understanding Layer™”,
+  “Entity Collision Problem™” and other related names, marks, and designations are trademarks or proprietary
+  terms of EntityWorks Ltd. Other product and company names may be trademarks of their respective owners.
 </p>
 
-<h2>1. Data Controller</h2>
+<h2>5. External Links</h2>
+<p>
+  This website may include links to external websites or resources. These links are provided for
+  convenience only. EntityWorks Ltd does not endorse and is not responsible for the content, accuracy,
+  security, or policies of any third-party websites.
+</p>
 
-<p>For the purposes of the UK GDPR, the data controller is:</p>
+<h2>6. Limitation of Liability</h2>
+<p>
+  To the fullest extent permitted by law, EntityWorks Ltd shall not be liable for any loss or damage
+  of any kind — whether direct, indirect, incidental, consequential, or otherwise — arising from or
+  in connection with:
+</p>
+<ul>
+  <li>your use of this website;</li>
+  <li>your reliance on any published information; or</li>
+  <li>any interruption, inaccuracy, error, or omission present in the content.</li>
+</ul>
 
+<h2>7. Changes to These Terms</h2>
+<p>
+  We may update these terms and any related legal notices from time to time. The latest version will
+  always be available on this page. Continued use of the website after updates are published will
+  be taken as acceptance of the revised terms.
+</p>
+
+<h2>8. Company Information</h2>
 <p>
   EntityWorks Ltd<br>
   Registered in England &amp; Wales<br>
@@ -64,118 +147,9 @@
   Bury St. Edmunds, England, IP28 7DE
 </p>
 
-<h2>2. We Do Not Collect Personal Data via the Website</h2>
-
 <p>
-  EntityWorks does <strong>not</strong> collect, store, process, or track any personal information from visitors who simply browse this website.
-</p>
-
-<ul>
-  <li>No cookies are set by EntityWorks</li>
-  <li>No analytics or tracking scripts are used</li>
-  <li>No user accounts or logins exist</li>
-  <li>No server-side collection of behavioural data takes place</li>
-</ul>
-
-<p>
-  Your browser may store standard cached files to display pages, but EntityWorks does not access, process, or use this information.
-</p>
-
-<h2>3. Cookie &amp; Tracking Statement</h2>
-
-<p>
-  This website does not set or use cookies, analytics tools, advertising technologies, fingerprinting tools, or behavioural tracking mechanisms.
-</p>
-
-<p>
-  No information is stored on your device by EntityWorks, and no third-party tracking services operate on this site.
-</p>
-
-<h2>4. Voluntary Contact</h2>
-
-<p>
-  If you choose to contact us by email at
-  <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>,
-  we will process the personal data included in your message solely for the purpose of responding to your enquiry.
-</p>
-
-<p>
-  We do not:
-</p>
-
-<ul>
-  <li>add your details to marketing lists,</li>
-  <li>use your data for anything beyond your enquiry,</li>
-  <li>share your correspondence with third parties.</li>
-</ul>
-
-<p>
-  Correspondence is retained only as long as necessary to manage and complete the exchange, after which it may be deleted or archived in line with normal business record-keeping practices.
-</p>
-
-<h2>5. Legal Basis for Processing (Article 6 UK GDPR)</h2>
-
-<p>
-  If you email us, our lawful basis for processing your personal data is
-  <strong>Legitimate Interest</strong> — specifically, responding to an enquiry you initiated.
-</p>
-
-<h2>6. Hosting &amp; Technical Logs</h2>
-
-<p>
-  This website is hosted on GitHub Pages. GitHub may collect minimal technical logs
-  (e.g., IP address and request metadata) for security, abuse prevention, and performance monitoring.
-</p>
-
-<p>
-  These logs:
-</p>
-
-<ul>
-  <li>are processed solely by GitHub,</li>
-  <li>are covered by GitHub’s own privacy policy,</li>
-  <li>are not accessed, collected, or used by EntityWorks.</li>
-</ul>
-
-<p>
-  EntityWorks does not use hosting logs for analytics, profiling, or marketing.
-</p>
-
-<h2>7. Your Rights</h2>
-
-<p>If you have contacted us and we hold personal data about you, you have the right to:</p>
-
-<ul>
-  <li>request access to your personal data,</li>
-  <li>request correction of inaccurate information,</li>
-  <li>request deletion of your data where appropriate,</li>
-  <li>object to or restrict our processing in certain circumstances.</li>
-</ul>
-
-<p>
-  To exercise these rights, contact:
-  <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>.
-</p>
-
-<p>
-  You may also lodge a complaint with the Information Commissioner’s Office (ICO) if you have concerns about how your data is being handled.
-</p>
-
-<h2>8. Changes to This Notice</h2>
-
-<p>
-  We may update this privacy notice from time to time. The most recent version will always be published on this page.
-</p>
-
-<p>
-  Updates to this notice do not imply changes to the EntityWorks Standard, which is governed through its own publication and versioning processes.
-</p>
-
-<h2>9. Contact Information</h2>
-
-<p>
-  EntityWorks Ltd<br>
-  Email: <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
+  For any questions regarding this notice, contact:
+  <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
 </p>
 
 </body>
