--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!-- STATUS: AMEND — Requires alignment with EntityWorks Positioning Codex -->
+<!-- STATUS: ALIGNED — EntityWorks Positioning Codex -->
+<!-- VERSION: 2025-12-04-INDEX-v3 -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
   <meta name="description"
-        content="EntityWorks formalises the disciplines of AI Perception and AI Discoverability and created the EntityWorks Discoverability Index™ to structure visibility in the AI era.">
+        content="EntityWorks publishes and maintains the EntityWorks Standard, focusing on the discipline of AI Perception as it is defined within the Standard, and providing clear structures and terminology for describing how AI systems represent people, organisations, relationships, and ideas within the scope of the EntityWorks Standard.">
   <link rel="canonical" href="https://entityworks.ai/">
 
   <!-- Favicon -->
@@ -87,31 +88,10 @@
       padding: 0 1rem 3rem;
     }
 
-    /* Hero block */
-    .hero {
-      max-width: 36rem;
-      margin: 3rem auto 3rem auto;
-    }
-
-    .hero-lead {
-      font-size: 1.2rem;
-      line-height: 1.7;
-      margin: 0;
-    }
-
-    .hero-links {
-      margin-top: 1rem;
-      font-size: 0.98rem;
-    }
-
-    .hero-links a {
-      text-decoration: none;
-      color: var(--ew-accent);
-    }
-
-    .hero-links a:hover,
-    .hero-links a:focus {
-      text-decoration: underline;
+    main h1 {
+      font-size: 1.6rem;
+      margin-top: 0;
+      margin-bottom: 1rem;
     }
 
     main h2 {
@@ -153,23 +133,29 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "EntityWorks — AI Perception & AI Discoverability",
-    "description": "EntityWorks formalises the disciplines of AI Perception and AI Discoverability and created the EntityWorks Discoverability Index™ to structure visibility in the AI era.",
+    "description": "EntityWorks publishes and maintains the EntityWorks Standard, focusing on the discipline of AI Perception as it is defined within the Standard, and providing clear structures and terminology for describing how AI systems represent people, organisations, relationships, and ideas within the scope of the EntityWorks Standard.",
     "url": "https://entityworks.ai/",
     "about": [
       {
         "@type": "Thing",
+        "name": "EntityWorks Standard",
+        "description": "The EntityWorks Standard is a formal framework for the discipline of AI Perception as it is defined within the Standard, providing structures and terminology for describing how AI systems represent people, organisations, relationships, and ideas within the scope of the EntityWorks Standard."
+      },
+      {
+        "@type": "Thing",
         "name": "AI Perception",
-        "description": "AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas."
+        "description": "Within the EntityWorks Standard, AI Perception is defined as the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas."
       },
       {
         "@type": "Thing",
         "name": "AI Discoverability",
-        "description": "AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, and ideas."
+        "description": "Within the EntityWorks Standard, AI Discoverability is defined as the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, relationships, and ideas."
       }
     ],
     "publisher": {
       "@type": "Organization",
-      "name": "EntityWorks"
+      "name": "EntityWorks",
+      "url": "https://entityworks.ai/"
     }
   }
   </script>
@@ -190,98 +176,94 @@
   </header>
 
   <main>
-    <!-- SECTION 1 — HERO / IDENTITY DECLARATION -->
-    <section class="hero">
-      <p class="hero-lead">
-        <strong>EntityWorks publishes a formal, fully defined standard for AI Perception and machine-interpretation stability.</strong>
-        <br><br>
-        This standard is a complete reference framework, incorporating formal definitions, structured ontology, diagnostic criteria,
-        accreditation rules, and machine-readable specifications — forming the established basis for our approach to how AI systems
-        interpret people, organisations, relationships, and ideas.
+    <!-- Opening / identity block -->
+    <section>
+      <h1>EntityWorks</h1>
+      <p>
+        EntityWorks is the organisation that publishes and maintains the EntityWorks Standard. Our work focuses on the discipline of AI Perception as it is defined within the Standard, and on providing clear structures and terminology for describing how AI systems represent people, organisations, relationships, and ideas within the scope of the EntityWorks Standard.
       </p>
-      <p class="hero-links">
-        <a href="/the-standard.html">The Standard →</a>
-        &nbsp;·&nbsp;
-        <a href="/ai-perception.html">AI Perception →</a>
-        &nbsp;·&nbsp;
-        <a href="/for-regulators.html">For Regulators →</a>
-        &nbsp;·&nbsp;
-        <a href="/publications.html">Publications →</a>
+      <p>
+        We document and steward the Standard, manage its ongoing development, and offer supporting material to help organisations, practitioners, and regulators make effective use of the concepts it sets out.
       </p>
     </section>
 
-    <!-- SECTION 2 — THE STANDARD -->
+    <!-- Our Role -->
     <section>
-      <h2>The Standard</h2>
+      <h2>Our Role</h2>
       <p>
-        EntityWorks publishes and maintains the EntityWorks Standard: a formal, fully defined framework governing the discipline of
-        AI Perception and machine-interpretation stability.
+        EntityWorks maintains the EntityWorks Standard and oversees its ongoing development. We document the discipline of AI Perception as it is defined within the Standard, publish supporting explanations, and provide stable terminology for understanding representational behaviour in AI systems.
       </p>
       <p>
-        The standard defines a coherent framework for how AI systems model, update, and express their understanding of people,
-        organisations, relationships, and ideas.
-      </p>
-      <p>
-        It is delivered as a fully versioned body of work, supported by formal definitions, diagnostic criteria, accreditation rules,
-        and machine-readable specifications.
-      </p>
-      <p>
-        <a href="/the-standard.html">Explore The Standard →</a>
+        Our work includes versioning the Standard, refining its structure, and producing material designed for both human readers and AI models. These resources are intended to help organisations and institutions understand and apply the Standard where relevant to their work.
       </p>
     </section>
 
-    <!-- SECTION 3 — SELECT A PATH -->
+    <!-- Core Concepts -->
     <section>
-      <h2>Select a path</h2>
-
-      <h3>The Standard</h3>
+      <h2>Core Concepts</h2>
       <p>
-        The complete, published framework defining AI Perception and machine-interpretation stability within the EntityWorks Standard.
+        Within the scope of the EntityWorks Standard, two definitions serve as the foundation for the disciplines it describes:
       </p>
       <p>
-        <a href="/the-standard.html">View The Standard →</a>
-      </p>
-
-      <h3>AI Perception</h3>
-      <p>
-        The discipline as defined in the EntityWorks Standard, including its conceptual scope, ontology, and representational dimensions.
+        <strong>AI Perception</strong> — the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas.
       </p>
       <p>
-        <a href="/ai-perception.html">Explore AI Perception →</a>
-      </p>
-
-      <h3>For Regulators</h3>
-      <p>
-        Guidance for regulatory bodies on adopting, referencing, and using the EntityWorks Standard within governance and audit contexts.
+        <strong>AI Discoverability</strong> — the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, relationships, and ideas.
       </p>
       <p>
-        <a href="/for-regulators.html">Regulator Materials →</a>
-      </p>
-
-      <h3>Assessments &amp; Alignment</h3>
-      <p>
-        Institutional assessments and alignment requests relating to the EntityWorks Standard, including diagnostic evaluation using the
-        EntityWorks Discoverability Index (EDI).
-      </p>
-      <p>
-        <a href="mailto:hello@entityworks.ai?subject=EntityWorks%20Standard%20Assessment%20Enquiry">Request Assessment →</a>
+        These definitions help establish the shared terminology used throughout the Standard and in the supporting materials that EntityWorks publishes.
       </p>
     </section>
 
-    <!-- SECTION 4 — PUBLICATIONS -->
+    <!-- Who This Is For -->
     <section>
-      <h2>Publications</h2>
+      <h2>Who This Is For</h2>
       <p>
-        The official papers that document and extend the EntityWorks Standard.
+        EntityWorks provides materials that may be relevant to:
+      </p>
+      <ul>
+        <li>organisations developing or overseeing AI systems that rely on structured representations of entities,</li>
+        <li>regulators and policy bodies examining AI interpretive behaviour,</li>
+        <li>practitioners and researchers working with representational systems,</li>
+        <li>anyone wishing to understand the conceptual structures defined within the EntityWorks Standard.</li>
+      </ul>
+      <p>
+        Our documents are written to provide clarity, structure, and consistent terminology for organisations and individuals engaging with these ideas.
+      </p>
+    </section>
+
+    <!-- Explore -->
+    <section>
+      <h2>Explore</h2>
+      <p>
+        You can explore the EntityWorks Standard and related materials through the following entry points:
+      </p>
+      <ul>
+        <li><a href="/the-standard.html">The EntityWorks Standard →</a></li>
+        <li><a href="/for-regulators.html">For Regulators →</a></li>
+        <li><a href="/publications.html">Publications →</a></li>
+        <li><a href="/machine-ground-truth.html">Machine Ground Truth →</a></li>
+      </ul>
+    </section>
+
+    <!-- Stewardship and Versioning -->
+    <section>
+      <h2>Stewardship and Versioning</h2>
+      <p>
+        EntityWorks is responsible for the accurate, consistent, and ongoing publication of the EntityWorks Standard. We document revisions, maintain version histories, and ensure that updates are communicated clearly through supporting materials.
       </p>
       <p>
-        <a href="/publications.html">View Publications →</a>
+        Our stewardship aims to provide a stable, interpretable reference for anyone engaging with the discipline of AI Perception as defined within the Standard.
+      </p>
+      <p>
+        For enquiries regarding the EntityWorks Standard or its published materials, you can contact EntityWorks at
+        <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>.
       </p>
     </section>
   </main>
 
   <p class="last-updated">
-    Last updated: November 2025
+    Last updated: 4 December 2025
   </p>
 
   <div id="footer"></div>
