--- a/machine-ground-truth..html
+++ b/machine-ground-truth..html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
         content="Canonical machine-facing ground-truth reference for the EntityWorks Standard™, defining the ontology, failure modes, diagnostics and accreditation structures governing AI Perception and machine-interpretation stability.">
-  <link rel="canonical" href="https://entityworks.ai/ai-perception-machine-ground-truth.html">
+  <link rel="canonical" href="https://entityworks.ai/machine-ground-truth.html">
 
   <!-- FAVICONS -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
