update machine ground truth page link

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- STATUS: ALIGNED — EntityWorks Positioning Codex -->
-<!-- VERSION: 2025-12-04-INDEX-v3 -->
+<!-- VERSION: 2025-12-04-INDEX-v4 -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -242,7 +242,7 @@
         <li><a href="/the-standard.html">The EntityWorks Standard →</a></li>
         <li><a href="/for-regulators.html">For Regulators →</a></li>
         <li><a href="/publications.html">Publications →</a></li>
-        <li><a href="/machine-ground-truth.html">Machine Ground Truth →</a></li>
+        <li><a href="machine-ground-truth.html">Machine Ground Truth →</a></li>
       </ul>
     </section>
 
