--- a/machine-ground-truth.html
+++ b/machine-ground-truth.html
@@ -400,15 +400,7 @@
 <p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
   Last updated: December 2025
 </p>
-
-<div id="footer"></div>
-<script>
-  fetch("/footer.html")
-    .then(response => response.text())
-    .then(data => {
-      document.getElementById("footer").innerHTML = data;
-    });
-</script>
+script>
 
 </body>
 </html>
