Fix punctuation in para one

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <section>
       <h1>EntityWorks</h1>
       <p>
-        EntityWorks is the organisation that publishes and maintains the EntityWorks Standard. Our work focuses on the discipline of AI Perception as it is defined within the Standard, and on providing clear structures and terminology for describing how AI systems represent people, organisations, relationships, and ideas within the scope of the EntityWorks Standard.
+        EntityWorks is the organisation that publishes and maintains the EntityWorks Standard. Our work focuses on the discipline of AI Perception as it is defined within the Standard. We provide clear structures and terminology for describing how AI systems represent people, organisations, relationships, and ideas within the scope of the EntityWorks Standard.
       </p>
       <p>
         We document and steward the Standard, manage its ongoing development, and offer supporting material to help organisations, practitioners, and regulators make effective use of the concepts it sets out.
