--- a/the-standard.html
+++ b/the-standard.html
@@ -149,8 +149,9 @@
       font-size: 0.85rem;
       color: var(--ew-muted);
       max-width: var(--ew-max-width);
-      margin: 0 auto 0;
+      margin: 0.5rem auto 0;
       padding: 0 1rem 1.5rem;
+      text-align: left; 
     }
   </style>
 
