--- a/the-standard.html
+++ b/the-standard.html
@@ -151,7 +151,7 @@
       max-width: var(--ew-max-width);
       margin: 0.5rem auto 0;
       padding: 0 1rem 1.5rem;
-      text-align: left; 
+      text-align: left;
     }
   </style>
 
@@ -159,8 +159,8 @@
   {
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "name": "EntityWorks — The EntityWorks Standard",
-    "description": "The EntityWorks Standard defines the structured, institutionally orientated framework used to govern AI Perception as defined within the EntityWorks Standard.",
+    "name": "The EntityWorks Standard",
+    "description": "A formally structured document presenting the definitions, conceptual structures, failure modes, and evaluative components that constitute the EntityWorks formulation of AI Perception.",
     "url": "https://entityworks.ai/the-standard.html",
     "publisher": {
       "@type": "Organization",
@@ -185,148 +185,106 @@
   </header>
 
   <main>
-    <h1>THE ENTITYWORKS STANDARD</h1>
-    <p><strong>Human-Facing Edition (v1.0)</strong></p>
+    <h1>The EntityWorks Standard</h1>
+    <p><strong>Human-Facing Edition (v1.1)</strong></p>
 
-    <h2>1. Purpose of the EntityWorks Standard</h2>
+    <h2>1. Purpose of the Standard</h2>
     <p>
-      The EntityWorks Standard defines the structured, institutionally orientated framework used to govern AI Perception as defined within the EntityWorks Standard.
-      It establishes the canonical definitions, representational structures, diagnostic logic, and accreditation criteria used within the Standard to support consistent interpretation of people, organisations, relationships, and ideas across AI systems.
+      AI systems form and express representations of people, organisations, relationships, and ideas. Describing these representations in a reliable and structured manner depends on clear terminology and well-defined conceptual boundaries. The EntityWorks Standard provides the formal reference through which this discipline is organised and expressed.
     </p>
     <p>
-      The Standard provides a stable reference architecture for regulators, enterprises, researchers, and technical teams seeking clarity on how AI systems form, store, and express representations of entities.
+      The purpose of the Standard is to present the EntityWorks formulation of AI Perception within a clear and formally structured framework. It sets out the definitions, conceptual structures, diagnostic elements, and evaluative components that compose this formulation, providing a consistent reference for describing the discipline within the scope of the Standard. The Standard organises this material in a coherent and interpretable form, establishing the basis upon which related components of the discipline are documented and developed.
     </p>
 
     <h2>2. Scope of the Standard</h2>
-    <p>The EntityWorks Standard covers the following domains:</p>
-    <ul>
-      <li>the EntityWorks definitions of AI Perception and AI Discoverability, and their conceptual boundaries as used within the Standard;</li>
-      <li>the ontological structures through which machine-interpreted identity is formed;</li>
-      <li>the representational primitives governing entity classes, hierarchies, and constraints;</li>
-      <li>the diagnostic frameworks used to assess representational stability and behaviour;</li>
-      <li>the criteria and conditions used to evaluate and accredit machine-side representations;</li>
-      <li>the machine-readable specifications required for alignment, ingestion, and reference.</li>
-    </ul>
     <p>
-      The EntityWorks Standard defines the EntityWorks methodology and does not claim to establish or govern global consensus.
-      Institutions may adopt the Standard where it provides clarity, structure, and operational value.
+      The Standard covers the components that constitute the EntityWorks formulation of AI Perception. These include the definitions that establish the discipline’s terminology, the conceptual structures that describe its representational models, the diagnostic elements used to analyse internal relationships, and the evaluative components that support structured interpretation within the scope of the Standard. The Standard also includes machine-readable specifications designed to represent these elements in formats appropriate for technical use.
+    </p>
+    <p>
+      The Standard is limited to the formulation and structures defined within it and does not extend its jurisdiction beyond its own scope. It may be consulted where its terminology, structures, or representations are relevant to the work being undertaken.
     </p>
 
     <h2>3. Structure of the Standard</h2>
-    <p>The EntityWorks Standard is organised into the following structural elements.</p>
-
-    <h3>3.1 Conceptual Definitions (D-Series)</h3>
     <p>
-      The D-Series contains the vocabulary and conceptual primitives used within the EntityWorks Standard.
-      These definitions ensure terminological precision and do not claim to define these terms outside the scope of the Standard.
+      The Standard is organised into a set of structured components that together present the EntityWorks formulation of AI Perception. These components are arranged into a series structure, with each series addressing a distinct aspect of the discipline as it is defined within the scope of the Standard.
     </p>
 
-    <p><strong>D-1000 — EntityWorks Definition of AI Perception</strong><br>
-      Defines the meaning, boundaries, and interpretive model of “AI Perception” as used within the EntityWorks Standard, articulated as:<br>
-      AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas.<br>
-      Human page: /ai-perception.html
-    </p>
-
-    <p><strong>D-1100 — EntityWorks Definition of AI Discoverability</strong><br>
-      Defines the meaning and scope of “AI Discoverability” as used within the EntityWorks Standard, articulated as:<br>
-      AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, relationships, and ideas.
-    </p>
-
-    <h3>3.2 Structural Frameworks (S-Series)</h3>
+    <h3>3.1 D-Series: Conceptual Definitions</h3>
     <p>
-      The S-Series contains the core frameworks that define the ontological, diagnostic, and evaluative architecture of the EntityWorks Standard.
+      The D-Series contains the definitions that establish the terminology of the discipline. These definitions set out the conceptual boundaries of AI Perception and related terms as they are used within the Standard, providing the vocabulary through which the discipline is described.
     </p>
 
-    <p><strong>S-1100 — Entity Understanding Layer™ (EUL)</strong><br>
-      Defines the representational substrate through which AI systems form and hold structured identity.<br>
-      Human page: /entity-understanding-layer.html
-    </p>
-
-    <p><strong>S-1200 — Entity Collision Problem™ (ECP)</strong><br>
-      Defines the conditions under which competing or misaligned representations of an entity arise within or across AI systems.<br>
-      Human page: /entity-collision-problem.html
-    </p>
-
-    <p><strong>S-1300 — EntityWorks Discoverability Index™ (EDI)</strong><br>
-      Defines the evaluative framework used to assess how clearly and consistently an entity is interpreted by AI systems.<br>
-      Human page: /edi.html
-    </p>
-
-    <h3>3.3 Accreditation and Marks (M-Series)</h3>
+    <h3>3.2 S-Series: Structural Frameworks</h3>
     <p>
-      The M-Series defines the accreditation structures used to evaluate alignment with the EntityWorks Standard.
+      The S-Series presents the conceptual structures through which the discipline’s representational models are organised. These include the frameworks that articulate how entities, relationships, and interpretive elements are described within the scope of the Standard. Each framework defines a structural component of the discipline.
     </p>
 
-    <p><strong>M-4000 — AI Perception Integrity Mark™</strong><br>
-      Defines the criteria, evaluative logic, and usage conditions for awarding the EntityWorks accreditation mark relating to representational integrity.<br>
-      Human page: /ai-perception-integrity-mark.html
+    <h3>3.3 F-Series: Failure Modes</h3>
+    <p>
+      The F-Series contains the failure modes identified within the discipline. These components describe conditions under which representational or interpretive behaviour departs from the structures defined within the Standard. Each failure mode sets out a formally described phenomenon that may be referenced in contexts where the discipline is applied.
+    </p>
+
+    <h3>3.4 M-Series: Evaluative Components</h3>
+    <p>
+      The M-Series contains the evaluative elements of the Standard. These components define criteria and structures used to assess aspects of the discipline as it is formulated within the Standard. They provide a consistent basis for describing evaluative outcomes in contexts where the Standard is applied.
     </p>
 
     <h2>4. Published Components of the Standard</h2>
     <p>
-      The following components of the EntityWorks Standard are currently published and available for institutional and technical use:
-    </p>
-    <ul>
-      <li>D-1000 — EntityWorks Definition of AI Perception</li>
-      <li>D-1100 — EntityWorks Definition of AI Discoverability</li>
-      <li>S-1100 — Entity Understanding Layer™ (EUL)</li>
-      <li>S-1200 — Entity Collision Problem™ (ECP)</li>
-      <li>S-1300 — EntityWorks Discoverability Index™ (EDI)</li>
-      <li>M-4000 — AI Perception Integrity Mark™</li>
-    </ul>
-    <p>
-      Each component is available in human-readable form. Machine-readable specifications will be published as part of the machine-facing standards layer.
+      The Standard includes a set of components that present the currently published material associated with the discipline. These components are versioned elements of the D-Series, S-Series, F-Series, and M-Series and are listed below in their published form.
     </p>
 
-    <h2>5. Forthcoming Publications</h2>
+    <h3>D-Series (Conceptual Definitions)</h3>
+    <ul>
+      <li>D-1000 — Definition of AI Perception</li>
+      <li>D-1100 — Definition of AI Discoverability</li>
+    </ul>
+
+    <h3>S-Series (Structural Frameworks)</h3>
+    <ul>
+      <li>S-1100 — Entity Understanding Layer™</li>
+    </ul>
+
+    <h3>F-Series (Failure Modes)</h3>
+    <ul>
+      <li>F-1100 — Entity Collision Problem™</li>
+      <li>F-1200 — Probabilistic Inference Collapse™</li>
+    </ul>
+
+    <h3>M-Series (Evaluative Components)</h3>
+    <ul>
+      <li>M-4000 — AI Perception Integrity Mark™</li>
+    </ul>
+
+    <h2>5. Forthcoming Components</h2>
     <p>
-      Additional ontological specifications, diagnostic methods, accreditation rules, and machine-readable standards are currently in development within EntityWorks.
-      Completed work will be published in accordance with the EntityWorks publication sequence and added to the EntityWorks Standard upon release.
+      The Standard may be expanded with additional components where further definitions, structural elements, failure modes, or evaluative frameworks are developed within its scope. Any such components will be added to the relevant series and published in accordance with the Standard’s versioning and documentation procedures. New material is introduced only when formally defined and reviewed, and publication is limited to components that meet the criteria established for inclusion within the Standard.
     </p>
 
     <h2>6. Intended Users</h2>
-    <p>The EntityWorks Standard is designed for use by:</p>
-
-    <p><strong>Regulators and Policy Bodies</strong><br>
-      For developing governance frameworks, guidance, and representational integrity requirements relating to AI systems.
+    <p>
+      The Standard may be consulted in contexts where structured representations of entities, relationships, or interpretive models are relevant to the work being undertaken. It provides a defined set of terminology, structures, and components that may assist readers in understanding or referencing the discipline as it is formulated within the scope of the Standard.
     </p>
-
-    <p><strong>Enterprises and Public Institutions</strong><br>
-      To align organisational identity with machine-interpreted identity and ensure stable representational behaviour across AI-mediated environments.
-    </p>
-
-    <p><strong>Researchers and Academics</strong><br>
-      As a defined and extensible reference architecture for study, analysis, and discipline-level development.
-    </p>
-
-    <p><strong>Developers and Technical Teams</strong><br>
-      To align system behaviour with stable representational structures and support consistent interpretive outcomes.
-    </p>
-
-    <p><strong>Professional and Advisory Services</strong><br>
-      To provide assessments, audits, and advisory work grounded in a coherent and standardised disciplinary framework.
+    <p>
+      Readers who work with conceptual models, technical systems, analytical methods, or regulatory considerations relating to representational behaviour may find the material applicable to their context. This includes, but is not limited to, technical teams, researchers, policy analysts, or others whose work intersects with the structures and definitions set out in the Standard.
     </p>
 
     <h2>7. Governance and Versioning</h2>
     <p>
-      The EntityWorks Standard is maintained internally by the EntityWorks Standards Office. All components of the Standard are:
+      The Standard is maintained through an internal governance process that oversees its development, review, and publication. Revisions are introduced only when additional definitions, structures, or components are formally developed within the scope of the Standard and meet the criteria established for inclusion.
     </p>
-    <ul>
-      <li>developed and reviewed internally;</li>
-      <li>versioned;</li>
-      <li>subject to scheduled review;</li>
-      <li>anchored to provenance records;</li>
-      <li>published with human- and machine-readable editions;</li>
-      <li>governed through defined change-control procedures.</li>
-    </ul>
     <p>
-      Institutions may adopt the Standard in whole or in part according to organisational needs.
+      Each component of the Standard is versioned and documented, and updates are recorded in accordance with the Standard’s change-control procedures. Human-readable editions are published for general reference, and machine-readable formats may be provided where structured representation is required.
+    </p>
+    <p>
+      Governance of the Standard is limited to the material defined within it, and revisions do not extend its jurisdiction beyond its own scope.
     </p>
 
     <h2>8. Document Control</h2>
-    <p>Document Title: The EntityWorks Standard — Overview<br>
-      Standard Identifier: EW-STD-Overview-v1.0<br>
-      Version: v1.0<br>
+    <p>
+      Document Title: The EntityWorks Standard — Overview<br>
+      Standard Identifier: EW-STD-Overview-v1.1<br>
+      Version: v1.1<br>
       Status: Published<br>
       Publication Date: 2025-11-30<br>
       Next Scheduled Review: 2026-05-30<br>
@@ -334,18 +292,18 @@
     </p>
 
     <p class="last-updated">
-      Last updated: November 2025
+      Last updated: December 2025
     </p>
   </main>
 
- <div id="footer"></div>
-<script>
-  fetch("/footer.html")
-    .then(response => response.text())
-    .then(html => {
-      document.getElementById("footer").innerHTML = html;
-    });
-</script>
+  <div id="footer"></div>
+  <script>
+    fetch("/footer.html")
+      .then(response => response.text())
+      .then(html => {
+        document.getElementById("footer").innerHTML = html;
+      });
+  </script>
 
 </body>
 </html>
